confik-macros/tests/trybuild/fail-default-parse.stderr
error[E0277]: the trait bound `usize: From<i32>` is not satisfied
 --> tests/trybuild/fail-default-parse.rs:3:24
  |
3 |     #[confik(default = 1 + 2)]
  |                        ^----
  |                        |
  |                        the trait `From<i32>` is not implemented for `usize`
  |                        this tail expression is of type `_`
  |
  = help: the following other types implement trait `From<T>`:
            <f32 as From<i16>>
            <f32 as From<i8>>
            <f32 as From<u16>>
            <f32 as From<u8>>
            <f64 as From<f32>>
            <f64 as From<i16>>
            <f64 as From<i32>>
            <f64 as From<i8>>
          and $N others
  = note: required for `i32` to implement `Into<usize>`
